# sirius

./: .gitignore  BACKEND_VERIFICATION_AND_AI_LAYER_PREP.md  DATA_LAYER_COMPLETE.md  DIAGNOSTIC_NOW.md  GIT_CHECKPOINT.md  INSTALL_WALRUS_CLI.md  PROJECT_AUDIT_AND_PLAN.md  README.md  TEST_WALRUS_MANUAL.md  TEST_WALRUS_WSL.md  TEST_WSL_COMMAND.md  TROUBLESHOOTING.md  WALRUS_SETUP.md  WALRUS_TESTNET_SETUP.md  WALRUS_WALLET_CHECK.md  WAL_COINS_SETUP.md  WSL_WALRUS_SETUP.md  package-lock.json
Backend/: .eslintrc.json  .gitignore  BACKEND_ARCHITECTURE_FOR_TEE_INTEGRATION.md  DEBUGGING.md  FIX_PORT_3000.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TEST_SERVER.md  jest.config.js  package.json  tsconfig.json
Backend/prisma/: schema.prisma  schema_v2_move_first.prisma
Backend/samples/: sample-manifest.json  sample1.csv  sample2.txt
Backend/scripts/: check-datasets.ts
Backend/src/: index.ts
Frontend/: DEMO_GUIDE.md  README.md  SIRIUS_INTEGRATION.md  SUI_INTEGRATION.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
Frontend/components/: Header.tsx  UseSirButton.tsx
Frontend/src/: App.tsx  index.css  vite-env.d.ts
Move/: Move.toml  README.md
Move/sources/: sirius.move
tee_v0/: claude_image_report.py  claude_report.py  requirements.txt  verify_image.sh
tee_v1/: Cargo.toml  README.md  __init__.py  config.py  crypto_utils.py  main.py  models.py  pii_scanner.py  requirements.txt  weapon_and_claude.py
tee_v1/src/: claude_client.rs  config.rs  crypto_utils.rs  main.rs  models.rs  pii_scanner.rs  weapon_detector.rs
(+186 files in other folders)
