[package]
name = "tee_substitute"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
once_cell = "1.19"
walkdir = "2.5"
regex = "1.11"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# For ONNX-based gun detection inference in Rust
anyhow = "1.0"
image = "0.25"
ndarray = "0.15"
# Use the current 2.0.0 release candidate explicitly, as suggested by Cargo.
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }

uuid = { version = "1", features = ["v4"] }


